--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             <div class="timeline-item vacation">
                 <div class="timeline-content">
                     <div class="timeline-date">December 19 - January 5</div>
-                    <div class="timeline-title">🎄 Christmas Vacation Period</div>
+                    <div class="timeline-title">Christmas Vacation Period</div>
                     <div class="timeline-desc">Client on vacation. Team continued working on Chat-bot SIT issues and DPE/SPNS fixes during this period.</div>
                     <div class="module-badges">
                         <span class="badge dpe">DPE</span>
