--- a/index.html
+++ b/index.html
@@ -647,7 +647,9 @@
                 </ul>
             </div>
         </div>
-
+        <div class="summary" style="margin-top: 20px;">
+            <h3>UAT Bug Tracker Link : <a href="https://docs.google.com/spreadsheets/d/16-ZF2JXsM4gjeO4RULaF_hLZxPeOPZsaiF1vLXSwaGk/edit?gid=1581041675#gid=1581041675">https://docs.google.com/spreadsheets/d/16-ZF2JXsM4gjeO4RULaF_hLZxPeOPZsaiF1vLXSwaGk/edit?gid=1581041675#gid=1581041675</a></h3>
+        </div>
     </div>
 </body>
 </html>
