--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="timeline-item milestone">
                 <div class="timeline-content">
                     <div class="timeline-date">December 19, 2025</div>
-                    <div class="timeline-title">Chat-Bot UAT Release</div>
+                    <div class="timeline-title">Bot Builder UAT Release</div>
                     <div class="timeline-desc">Bot-Builder module released to UAT.</div>
                     <div class="module-badges"><span class="badge chatbot">Chat-Bot</span></div>
                 </div>
