--- a/index.html
+++ b/index.html
@@ -385,6 +385,19 @@
                 </div>
             </div>
 
+            <!-- Dec 23 - Code Review Changes -->
+            <div class="timeline-item internal">
+                <div class="timeline-content">
+                    <div class="timeline-date">December 23, 2025</div>
+                    <div class="timeline-title">Chat-Bot Code Review Changes</div>
+                    <div class="timeline-desc">Team was working on chat-bot code review changes. There were bugs in the initial build as well.</div>
+                    <div class="module-badges">
+                        <span class="badge chatbot">Chat-Bot</span>
+                        <span class="badge delay-type int">Internal Delay - Bugs</span>
+                    </div>
+                </div>
+            </div>
+
             <!-- Dec 24 - Dev Pre-verification -->
             <div class="timeline-item internal">
                 <div class="timeline-content">
@@ -398,24 +411,49 @@
                 </div>
             </div>
 
-            <!-- Dec 26-29 -->
+            <!-- Dec 26 - Dev-Pre Issues Fixed -->
             <div class="timeline-item progress">
                 <div class="timeline-content">
-                    <div class="timeline-date">December 26-29, 2025</div>
-                    <div class="timeline-title">Job Scheduling Fixes & Walkthrough</div>
-                    <div class="timeline-desc">Dec 26: Fixed job scheduling issues. Dec 29: Positive walkthrough held.</div>
+                    <div class="timeline-date">December 26, 2025</div>
+                    <div class="timeline-title">Dev-Pre Issues Fixed</div>
+                    <div class="timeline-desc">Team fixed the issues mentioned in the dev-pre verification.</div>
                     <div class="module-badges"><span class="badge chatbot">Chat-Bot</span></div>
                 </div>
             </div>
 
-            <!-- Dec 30-31 -->
+            <!-- Dec 29 - Positive Walkthrough -->
+            <div class="timeline-item internal">
+                <div class="timeline-content">
+                    <div class="timeline-date">December 29, 2025</div>
+                    <div class="timeline-title">Positive Walkthrough with Bugs</div>
+                    <div class="timeline-desc">Positive walkthrough was conducted on 29th December. However, bugs were identified in the chat-bot once again.</div>
+                    <div class="module-badges">
+                        <span class="badge chatbot">Chat-Bot</span>
+                        <span class="badge delay-type int">Internal Delay - Bugs</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Dec 30 - Issues Completed & BEA Delay -->
+            <div class="timeline-item external">
+                <div class="timeline-content">
+                    <div class="timeline-date">December 30, 2025</div>
+                    <div class="timeline-title">Issues Completed - BEA Testing Delayed</div>
+                    <div class="timeline-desc">The issues were completed by December 30th. Due to internal emergencies, BEA team couldn't start the testing by 31st.</div>
+                    <div class="module-badges">
+                        <span class="badge chatbot">Chat-Bot</span>
+                        <span class="badge dpe">DPE</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Dec 31 - Chat-Bot Fixes -->
             <div class="timeline-item progress">
                 <div class="timeline-content">
-                    <div class="timeline-date">December 30-31, 2025</div>
-                    <div class="timeline-title">DPE Review & Chat-Bot Fixes</div>
-                    <div class="timeline-desc">Dec 30: DPE client changes reviewed. Dec 31: Chat-bot dev-pre issues fully fixed.</div>
+                    <div class="timeline-date">December 31, 2025</div>
+                    <div class="timeline-title">Chat-Bot Dev-Pre Issues Fully Fixed</div>
+                    <div class="timeline-desc">Chat-bot dev-pre issues fully fixed.</div>
                     <div class="module-badges">
-                        <span class="badge dpe">DPE</span>
                         <span class="badge chatbot">Chat-Bot</span>
                     </div>
                 </div>
@@ -576,26 +614,39 @@
                 </div>
             </div>
 
-            <!-- Jan 27-29 - Timezone & Deleted records -->
-            <div class="timeline-item external">
+            <!-- Jan 27 - Query Changes & Timezone Logic -->
+            <div class="timeline-item progress">
                 <div class="timeline-content">
-                    <div class="timeline-date">January 27-29, 2026</div>
-                    <div class="timeline-title">Timezone Clarification & Data Issues</div>
-                    <div class="timeline-desc">Back and forth on timezone confusion. Jesse identified deleted events/carts being included in system.</div>
+                    <div class="timeline-date">January 27, 2026</div>
+                    <div class="timeline-title">Query Changes & Timezone Logic Completed</div>
+                    <div class="timeline-desc">The requested query level changes were completed and timezone logics were added. Current timezone logic took the UTC time and converted it into local timezone of the franchisee. Emails triggered for both use cases.</div>
                     <div class="module-badges">
                         <span class="badge dpe">DPE</span>
                         <span class="badge spns">SPNS</span>
-                        <span class="badge delay-type ext">External Delay</span>
                     </div>
                 </div>
             </div>
 
-            <!-- Jan 30 - Final fixes -->
+            <!-- Jan 28 - Deleted Records & Time Calculation -->
+            <div class="timeline-item external">
+                <div class="timeline-content">
+                    <div class="timeline-date">January 28, 2026</div>
+                    <div class="timeline-title">Deleted Records & Time Calculation Issues</div>
+                    <div class="timeline-desc">Jesse identified that deleted events and carts were being included in the system. Jesse asked to calculate time from midnight to day end for a given start and end date.</div>
+                    <div class="module-badges">
+                        <span class="badge dpe">DPE</span>
+                        <span class="badge spns">SPNS</span>
+                        <span class="badge delay-type ext">External Delay - New Issue</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Jan 29-30 - Issues Fixed & Emails Triggered -->
             <div class="timeline-item progress">
                 <div class="timeline-content">
-                    <div class="timeline-date">January 30, 2026</div>
-                    <div class="timeline-title">All Issues Fixed</div>
-                    <div class="timeline-desc">Fixed all issues highlighted by Jesse. Client was okay with the build.</div>
+                    <div class="timeline-date">January 29-30, 2026</div>
+                    <div class="timeline-title">Issues Fixed & Emails Triggered</div>
+                    <div class="timeline-desc">The issue posted by Jesse was fixed and the emails for SPNS and DPE were triggered. Client was okay with the build.</div>
                     <div class="module-badges">
                         <span class="badge dpe">DPE</span>
                         <span class="badge spns">SPNS</span>
@@ -633,7 +684,7 @@
                     <li><strong>Jan 14:</strong> No testing activity logged for Chat-bot</li>
                     <li><strong>Jan 22:</strong> Post verbal sign-off - new requirements: date range format, extra columns, DPE logic change (NOT in FRD)</li>
                     <li><strong>Jan 23:</strong> Timezone issues raised - not discussed in previous call</li>
-                    <li><strong>Jan 27-29:</strong> Back and forth on timezone; deleted records issue identified late</li>
+                    <li><strong>Jan 28:</strong> Jesse identified deleted events/carts in system; requested midnight to day end time calculation</li>
                 </ul>
             </div>
 
@@ -642,7 +693,10 @@
                 <ul>
                     <li><strong>Dec 14:</strong> Team occupied with chat-bot issues and internal calls - delayed DPE documentation</li>
                     <li><strong>Dec 16:</strong> DPE query changes not made as team was working on chat-bot development</li>
+                    <li><strong>Dec 23:</strong> Team working on chat-bot code review changes; bugs in initial build</li>
                     <li><strong>Dec 24:</strong> Chat-bot code had bugs requiring fixes during dev pre-verification</li>
+                    <li><strong>Dec 29:</strong> Positive walkthrough conducted but bugs identified in chat-bot again</li>
+                    <li><strong>Dec 30:</strong> Issues completed but BEA team couldn't start testing due to internal emergencies</li>
                     <li><strong>Jan 15-18:</strong> Team holiday period</li>
                 </ul>
             </div>
