--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">December 30, 2025</div>
                     <div class="timeline-title">Issues Completed - BEA Testing Delayed</div>
-                    <div class="timeline-desc">The issues were completed by December 30th. Due to internal emergencies, BEA team couldn't start the testing by 31st.</div>
+                    <div class="timeline-desc">The issues were completed by December 30th. </div>
                     <div class="module-badges">
                         <span class="badge chatbot">Chat-Bot</span>
                         <span class="badge dpe">DPE</span>
@@ -451,8 +451,8 @@
             <div class="timeline-item progress">
                 <div class="timeline-content">
                     <div class="timeline-date">December 31, 2025</div>
-                    <div class="timeline-title">Chat-Bot Dev-Pre Issues Fully Fixed</div>
-                    <div class="timeline-desc">Chat-bot dev-pre issues fully fixed.</div>
+                    <div class="timeline-title">Positive walkthrough Issues Fully Fixed</div>
+                    <div class="timeline-desc">Due to emergencies, BEA team couldn't start the testing by 31st.</div>
                     <div class="module-badges">
                         <span class="badge chatbot">Chat-Bot</span>
                     </div>
